force-app/main/default/objects/POS_Error_Log__c/POS_Error_Log__c.object-meta.xml
<CustomObject>
    <label>POS Error Log</label>
    <nameField>
        <label>POS Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POS Errors Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>