force-app/main/default/objects/POS_Error_Log__c/fields/Error_Line__c.field-meta.xml
<CustomField>
    <fullName>Error_Line__c</fullName>
    <label>Error Line</label>
    <length>128</length>
    <type>Text</type>
</CustomField>