force-app/main/default/objects/POS_Error_Log__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <label>User Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>