force-app/main/default/objects/POS_Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Exception_Type_Name__c</columns>
    <columns>Error_Line__c</columns>
    <columns>StackTrace__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>